# diesel-minimal-example

./: Cargo.toml  readme.md
src/: main.rs
